# IFJ-project2019

./: .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt  Hash testy.c  Ifj_Dokumentácia.docx  LL Gratmatika.docx  LL_Grammar.txt  Makefile  README.md  add_convert  cmake_install.cmake  dokumentace.docx  fsm.drawio  hovno.code  ifj19.py  kokot.code  makefile_odovzdanie  program.code  rozdeleni  symtable.h  symtable_test.c  temp.code  temp.src
ifjtest/: joj.code  main.sh  temp.code  temp.src
ifjtest/tests/: 1.src  2.src  func_call_edge_case.src  test_chr.src  test_func.src  test_if.src  (+10 more)
src/: CMakeLists.txt  enums.h  error.h  expr_parser.c  expr_parser.h  function_str.c  function_str.h  generator.c  generator.h  main.c  parser.c  parser.h  scanner.c  scanner.h  stack.c  stack.h  string_lib.c  string_lib.h  symtable.c  symtable.h  temp_file.c  temp_file.h  typedefs.h
test/: CMakeLists.txt  expr_test.c  generator_test.c  parser_test.c  scanner_test.c  stack_test.c  string_lib_test.c  symtable_test.c
test/test_data/: chr_invalid_1.txt  chr_valid_1.txt  def_valid_1  expr_test1.txt  function  id_eq_expr_invalid2.txt  id_eq_expr_invalid3.txt  id_eq_expr_valid.txt  id_eq_expr_valid2.txt  if_valid_1  if_valid_2  inputi_invalid1.txt  inputi_invalid2.txt  inputi_invalid3.txt  inputi_valid1.txt  inputi_valid2.txt  inputs_invalid1.txt  inputs_invalid2.txt  inputs_invalid3.txt  inputs_valid1.txt  parser_test1.txt  print_error  print_error2  print_multi_param2  print_multi_param_extreme  print_one_param.txt  scanner_test_10.txt  scanner_test_12.txt  scanner_test_2.txt  scanner_test_4.txt  scanner_test_5.txt  scanner_test_6.txt  scanner_test_7.txt  scanner_test_8.txt  scanner_test_9.txt  while_valid_1  while_valid_2
tests/: run_tests.sh
unity/: CMakeLists.txt
(+73 files in other folders)
